(lesson 68 course node) Implement application menu

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "colors": "^1.4.0",
     "inquirer": "^8.2.0"
+  },
+  "devDependencies": {
+    "prettier": "2.5.1"
   }
 }
